--- a/src/css/App.css
+++ b/src/css/App.css
@@ -51,28 +51,30 @@ body::before {
   width: 80%;
   background-color: rgb(235, 225, 225);
   position: relative;
-
   border-radius: 10px;
-  padding: 1rem 2rem;
+  padding: 1rem 1.5rem 1rem 2rem;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .text-input {
   background-color: transparent;
   outline: none;
   border: none;
-  width: 100%;
+  width: 90%;
   height: 3rem;
   cursor: pointer;
   font-size: 2.4rem;
   color: rgb(54, 52, 52);
+  margin-right: 1rem;
 }
 
 .submit {
-  position: absolute;
-  top: 50%;
-  right: 4%;
-  transform: translate(50%, -50%);
-  width: 10%;
+  width: 5%;
   height: 100%;
   background-color: transparent;
   outline: none;
@@ -112,4 +114,16 @@ body::before {
 
 .icon-delete-element:hover {
   background-color: rgba(161, 157, 157, 0.26);
+}
+
+@media only screen and (max-width: 43.75em) {
+  .search-container {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 31.25em) {
+  .container-main {
+    width: 95%;
+  }
 }
